--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+
+
+@media only screen (min-width: 500px){
+
+
+}
+
+@media only screen (min-width: 820px){
+
+    
+}
+
+@media only screen (min-width: 1100px){
+
+    
+}
