--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,25 @@
     margin: 0;
     box-sizing: border-box;
 }
+/* Vores start CSS er designet til mobiler i portait mode */
 
 
-
-@media only screen (min-width: 425px){
+@media only screen (min-width: 540px) and (orientation: landscape){
 
 
 }
 
-@media only screen (min-width: 768px){
+@media only screen (min-width: 768px) and (orientation: portrait){
 
     
 }
 
-@media only screen (min-width: 1024px){
+@media only screen (min-width: 1024px) and (orientation: landscape){
+
+    
+}
+
+@media only screen (min-width: 1200px){
 
     
 }
