--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@
     --extra: #8F7858;
 }
 
+header {
+    position: sticky;
+}
+
 header a {
     display: flex;
 }
@@ -31,21 +35,21 @@ nav {
     width: 100%;
 }
 
+nav ul {
+    display: none;
+}
+
 .cover {
-    width: 200px;
-    height: auto;
-}
-
-.bigphoto > video {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
     overflow: hidden;
-    object-fit: cover;
 }
 
-.bigphoto video {
-    min-width: 100%;
-    min-height: 100%;
+#bigphoto {
+    width: 100%;
+}
+
+#menu-bar:checked ~ nav ul {
+    display: block;
 }
 
 @media only screen (min-width: 540px) and (orientation: landscape){
