--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ form {
     gap: 10px; /* Afstand mellem formularfelter */
     margin-bottom: 20px;
     text-align: left;
-    max-width: 400px; /* Maksimal bredde på formularen */
+    max-width: 350px; /* Maksimal bredde på formularen */
     margin: 0 auto;   /* Centrerer formularen */
 }
 
@@ -130,11 +130,12 @@ form input[type="submit"] {
 footer h2 {
     font-size: 50px;
     margin-bottom: 20px;
+    margin-top: 3rem;
 }
 
 
 form input[type="submit"]:hover {
-    background-color: #8F7858; /* Mørkere brun, når knappen hoveres */
+    background-color: #8F7858; /* Lysere brun, når knappen hoveres */
 }
 
 @media only screen (min-width: 540px) and (orientation: landscape){
