--- a/css/style.css
+++ b/css/style.css
@@ -94,52 +94,30 @@ header #menu-bar ul li:hover > ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+}
+
+.container {
     position: relative;
-}
-
-.forside-billeder img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-#bestseller1 {
-    background-image: url(../imgs/bestseller-billede1.webp) alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top";
-}
-
-#bestseller2 {
-    background: src="../imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen";
-}
-
-#bestseller3 {
-    background: src="../imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler";
-}
-
-#bestseller4 {
-    background: src="../imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden";
-}
-}
-
-.overlay {
-
+    text-align: center;
+    margin: -2px;
+    margin-bottom: -5px;
 }
 
 .mobil-tekst {
     background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -10%);
     width: 100%;
-    height: 15%;
-    z-index: 10;
-    margin-top: -22%;
+    color: var(--primary);
+    padding: 0.5rem;
+    
 }
 
 .bestseller {
     width: 100%;
-    /* border: 1px solid var(--primary); */
+    border: 2px solid rgba(0, 0, 0, 0.5);
 }
 
 
