--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -91,17 +91,22 @@ header #menu-bar ul li:hover > ul {
     display: block;
 }
 
-
-.baggrund1 {
-    background-image:url('../imgs/big-photo-prinsesse.webp');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width:100%;
-    height: 100vh;
+.container img {
+    width: 100%;
 }
 
-
+h1 {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%);
+    width: 100%;
+    color: var(--primary);
+    padding: 3rem;
+    text-align: center;
+    font-size: 3rem;
+}
 
 footer {
     background-color: #E7E0D6 ; /* Lys baggrund for footeren */
