--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -112,16 +112,13 @@ header #menu-bar ul li:hover > ul {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     position: relative;
-    max-width: 300px;
     width: 100%;   
     height: 100%;
     
-   
 }
 
 .kategorier{
-    display: grid;   
-    max-width: 200px;  
+    display: grid;    
     margin: 0 auto;  
     width: 100%;
     height: 100%;
@@ -136,15 +133,14 @@ header #menu-bar ul li:hover > ul {
 
 .overlay-text{
     position: relative;
-    bottom: 0;  
+    bottom: 50%;  
     left: 0;  
     right: 0;  
     width: 100%;
     color: white;  
     font-weight: bold;  
     text-align: center;  
-    font-size: 16px;  
-    background: rgba(0, 0, 0, 0.5);  
+    font-size: 25px;  
     padding: 10px 0;
 }
 
