--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -108,6 +108,29 @@ h1 {
     font-size: 3rem;
 }
 
+.prinsesse-billeder{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.prinsesse {
+    display: grid;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.prinsesse img {
+    width: 100%;
+    height: 100%;
+}
+
 footer {
     background-color: #E7E0D6 ; /* Lys baggrund for footeren */
     color: #4f402c;           /* brun tekstfarve */
