--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -221,7 +221,26 @@ form input[type="submit"]:hover {
 
 @media only screen and (min-width: 768px) and (orientation: portrait){
 
-    
+.cover-photo img{
+    width: 100%;
+    height: 80%;
+}
+
+.kategori-titel{
+    font-size: 50px; 
+    padding: 2.0rem;
+}
+
+.overlay-text{
+    font-size: 35px;  
+    padding: 10px 0;
+
+}
+nav label img{
+    margin-top: 1%
+
+}
+
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
