--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -245,10 +245,43 @@ nav label img{
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
 
+    .cover-photo img{
+        width: 100%;
+        height: 80%;
+    }
+    
+    .kategori-titel{
+        font-size: 65px; 
+        padding: 2.0rem;
+    }
+    
+    .overlay-text{
+        font-size: 45px;  
+        padding: 10px 0;
+    }
+
+    .left-icon {
+        width: 12%;
+    }
+
+    nav label img{
+        width: 14%;
+        margin-top:1.2%
+    }
     
 }
 
 @media only screen and (min-width: 1200px){
 
-    
+.kategori-billeder{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0px;
+}
+
+.kategorier{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0px;
+}
 }
