--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -1,9 +1,8 @@
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-
 /* Vores start CSS er designet til mobiler i portait mode */
 :root {
     --primary: #E7E0D6;
@@ -51,7 +50,7 @@ nav ul {
     overflow: hidden;
 }
 
-img {
+#bigphoto {
     width: 100%;
 }
 
@@ -62,7 +61,7 @@ nav label img {
     position: absolute;
     right: 0;
     top: 0;
-    margin-top: 0;
+    margin-top: 4%;
 }
 
 #menu-bar {
@@ -91,35 +90,35 @@ header #menu-bar ul li:hover > ul {
     display: block;
 }
 
-.container img {
+.cover-photo img{
     width: 100%;
+
 }
 
-h1 {
-    background-color: rgba(0, 0, 0, 0.7);
+.prinsesse-titel{
+    background-color:rgba(0, 0, 0, 0.8) ;
     position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%);
-    width: 100%;
+    bottom: 0;  
+    width: 100%;  
     color: var(--primary);
-    padding: 3rem;
+    font-weight: bold;  
+    font-size: 40px;  
+    padding: 1.0rem;
     text-align: center;
-    font-size: 3rem;
 }
 
-.prinsesse-billeder{
+.prinsesse-billeder {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     position: relative;
-    width: 100%;
+    width: 100%;   
     height: 100%;
 }
 
-.prinsesse {
-    display: grid;
-    margin: 0 auto;
+.prinsesse{
+    display: grid;    
+    margin: 0 auto;  
     width: 100%;
     height: 100%;
     grid-template-columns: 1fr 1fr;
@@ -131,10 +130,24 @@ h1 {
     height: 100%;
 }
 
+.overlay-text{
+    position: relative;
+    bottom: 60%;   
+    width: 100%;
+    color:#E7E0D6;   
+    text-align: center;  
+    font-size: 12px;  
+}
+.overlay-text h2 {
+    font-size: 26px; 
+    font-weight: bold; 
+}
+
 footer {
     background-color: #E7E0D6 ; /* Lys baggrund for footeren */
     color: #4f402c;           /* brun tekstfarve */
     text-align: center;     /* Centrerer tekst og indhold */
+
 }
 
 footer img {
@@ -199,9 +212,11 @@ form input[type="submit"]:hover {
         height: 40vh;
     }
 
-    #bigphoto {
-       
+    .overlay-text {
+        font-size: 20px;
     }
+
+       
 
 }
 
@@ -219,4 +234,3 @@ form input[type="submit"]:hover {
 
     
 }
-
