--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header #menu-bar ul li:hover > ul {
 
 .whitespace {
     height: 2rem;
-    background-color: var(--secondary);
+    background-color: var(--primary);
 }
 
 .reviews {
@@ -327,10 +327,48 @@ form input[type="submit"]:hover {
 
 @media only screen and (min-width: 1200px){
 
+    .left-icon {
+        width: 15%;
+    }
+    
+    nav label img {
+        display: none;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    nav ul {
+        display: flex;
+    }
+
+    nav ul li {
+        list-style: none;
+        padding: 0 5%;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        color: var(--primary);
+        font-size: 2rem;
+    }
+
+    nav ul li a:hover {
+        background: var(--accent);
+    }
+
+    nav ul li ul {
+        display: none;
+    }
+
     .forside-titel {
-        font-size: 3rem;
+        font-size: 4.2rem;
         padding: 2%;
-        margin-bottom: -10px;
+        margin-top: 2px;
+        margin-bottom: -12px;
     }
 
     .bigphototext-1, .bigphototext-2 {
@@ -342,8 +380,20 @@ form input[type="submit"]:hover {
         grid-template-rows: none;
     }
 
+    .mobil-tekst {
+        display: none;
+    }
+
+    .bestseller:hover ~ .mobil-tekst {
+        display: block;
+    }
+
+    .review-1 h2, .review-2 h2 {
+        margin-bottom: 1%;
+    }
+
     .review-1, .review-2 {
-        padding: 3%;
+        padding: 18% 3%;
     }
 
     .review-titel {
@@ -356,11 +406,22 @@ form input[type="submit"]:hover {
 
     .reviews {
         background-size: 100% 100%;
+        flex-direction: row;
     }
 
     .fas {
         width: 4%;
     }
     
+    footer {
+        display: flex;
+        flex-direction: row;
+    }
+
+    footer img {
+        width: 10%;
+        height: 10%;
+    }
+
 }
 
