--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -132,11 +132,12 @@ header #menu-bar ul li:hover > ul {
 
 .overlay-text{
     position: relative;
-    bottom: 60%;   
+    bottom: 60%;
     width: 100%;
     color:#E7E0D6;   
     text-align: center;  
-    font-size: 12px;  
+    font-size: 12px; 
+    text-shadow: 2px 2px 2px black;
 }
 .overlay-text h2 {
     font-size: 26px; 
@@ -207,11 +208,6 @@ form input[type="submit"]:hover {
         width: 9%;
         margin-top: 2%;
     }
-
-    .cover {
-        height: 40vh;
-    }
-
     .overlay-text {
         font-size: 20px;
     }
@@ -220,9 +216,61 @@ form input[type="submit"]:hover {
 
 }
 
-@media only screen and (min-width: 768px) and (orientation: portrait){
+@media only screen and (min-width: 768px) and (orientation: portrait){ /* Til tablet */
+
+    .prinsesse-titel{
+        background-color:rgba(0, 0, 0, 0.8) ;
+        position: absolute;
+        bottom: 0;  
+        width: 100%;  
+        color: var(--primary);
+        font-weight: bold;  
+        font-size: 70px;  
+        padding: 4rem;
+        text-align: center;
+    }
+
+    .prinsesse-billeder {
+        display: grid;
+        grid-template-columns: (3,1fr);
+        grid-template-rows: repeat(2,1fr);
+        position: relative;
+        width: 100%;   
+        height: 100%;
+    }
+
 
     
+    .prinsesse{
+        display: grid;    
+        margin: 0 auto;  
+        width: 100%;
+        height: 100%;
+        grid-template-columns: (3,1fr);
+        grid-template-rows: repeat(2,1fr);
+    }
+    
+    .prinsesse img {
+        width: 100%;
+        height: auto; /* Bevarer billedforhold */
+        object-fit: cover; /* Sørger for at billedet fylder hele grid-cellen */
+    }
+    .overlay-text{
+        position: relative;
+        bottom: 60%;
+        width: 100%;
+        color:#E7E0D6;   
+        text-align: center;  
+        font-size: 12px; 
+        text-shadow: 2px 2px 2px black;
+    }
+    .overlay-text h2 {
+        font-size: 26px; 
+        font-weight: bold; 
+    }
+
+
+
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
