--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -96,7 +96,12 @@ header #menu-bar ul li:hover > ul {
 }
 
 .cover-photo-computer{
-    width: 100%;
+    width: 50%;
+    display: none;
+}
+
+.cover-photo-computer img{
+    width: 200%;
 }
 
 .kategori-titel{
@@ -217,9 +222,6 @@ form input[type="submit"]:hover {
         height: 40vh;
     }
 
-    #bigphoto {
-       
-    }
     .cover-photo-computer{
         display: none;
     }
@@ -231,6 +233,10 @@ form input[type="submit"]:hover {
 .cover-photo-mobil-tablet img{
     width: 100%;
     height: 80%;
+}
+
+.cover-photo-computer{
+    display: none;
 }
 
 .kategori-titel{
@@ -248,11 +254,23 @@ nav label img{
 
 }
 
+.overlay-text {
+    position: relative;
+    bottom: 50%;  
+    left: 0;  
+    right: 0; 
+    transform: translate(-0%, -0%);
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
 
-    .cover-photo img{
+    .cover-photo-mobil-tablet img{
         width: 100%;
         height: 80%;
     }
@@ -296,13 +314,10 @@ nav label img{
         height: auto;
         object-fit: cover;
     }
-}
+
+
 .cover-photo-computer{
-    
-    width: 100%;
-    background-image: cover;
     display: block;
-    height: auto;
     }
     
 .cover-photo-mobil-tablet img{
@@ -310,24 +325,28 @@ nav label img{
 }
 
 .overlay-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    bottom: 50%;  
+    left: 0;  
+    right: 0; 
+    transform: translate(-0%, -0%);
     color: white;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     opacity: 0;
     transition: opacity 0.3s ease;
     text-align: center;
 }
 
-.kategorier:hover .overlay-text {
-    opacity: 1;
+.kategorier:hover ~ .overlay-text {
+   opacity: 1;
 }
 
+.overlay-text:hover ~ .overlay-text {
+    opacity: 1;
+ }
 
-
+}
 
 
 
