--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -107,42 +107,113 @@ header #menu-bar ul li:hover > ul {
     text-align: center;
 }
 
-.prinsesse-billeder {
+body {
+    background-color: #E7E0D6;
+}
+
+.container1 {
+    position: relative;
+}
+.container1 .wrapper1 {
+    width: 100%;
+    height: 55vh;
+    margin: 5rem auto;
+    overflow: hidden;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.container1 .slider-holder1{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(4, 33.33%);
+    height: 100%;
+}
+.container1 #slider-image1 {
+    background-image: url(../imgs/prisesse-billede1.webp);
+    background-size: cover;
+}
+.container1 #slider-image2 {
+    background-image: url(../imgs/prinsesse-billede2.webp);
+    background-size: cover;
+}
+.container1 #slider-image3 {
+    background-image: url(../imgs/prinsesse-billede3.webp);
+    background-size: cover;
+}
+.container1 #slider-image4 {
+    background-image: url(../imgs/prinsesse-billede4.webp);
+    background-size: cover;
+}
+.container1 .button-holder1{
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+}
+.container1 .button-holder1 .dots {
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    border-radius: 3rem;
+    background-color: #000000;
+    margin: .4rem .3rem;
+}
+.container2 {
     position: relative;
-    width: 100%;   
-    height: 100%;
 }
-
-.prinsesse{
-    display: grid;    
-    margin: 0 auto;  
+.container2 .wrapper2 {
     width: 100%;
-    height: 100%;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    height: 55vh;
+    margin: 5rem auto;
+    overflow: hidden;
+    margin-top: 0;
+    margin-bottom: 60px;
 }
-
-.prinsesse img {
-    width: 100%;
+.container2 .slider-holder2{
+    display: grid;
+    grid-template-columns: repeat(4, 33.33%);
     height: 100%;
 }
-
+.container2 #slider-image5 {
+    background-image: url(../imgs/prinsesse-billede5.webp);
+    background-size: cover;
+}
+.container2 #slider-image6 {
+    background-image: url(../imgs/prinsesse-billede6.webp);
+    background-size: cover;
+}
+.container2 #slider-image7 {
+    background-image: url(../imgs/prinsesse-billede7.webp);
+    background-size: cover;
+}
+.container2 #slider-image8 {
+    background-image: url(../imgs/prinsesse-billede8.webp);
+    background-size: cover;
+}
+.container2 .button-holder2{
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+}
+.container2 .button-holder2 .dots {
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    border-radius: 3rem;
+    background-color: #000000;
+    margin: .4rem .3rem;
+}
 .overlay-text{
-    position: relative;
-    bottom: 60%;
     width: 100%;
     color:#E7E0D6;   
     text-align: center;  
-    font-size: 12px; 
+    font-size: 1rem; 
     text-shadow: 2px 2px 2px black;
 }
 .overlay-text h2 {
     font-size: 26px; 
     font-weight: bold; 
+    margin-top: 100%;
 }
+
 
 footer {
     background-color: #E7E0D6 ; /* Lys baggrund for footeren */
