--- a/css/materialer.css
+++ b/css/materialer.css
@@ -22,6 +22,11 @@ header {
     position: sticky;
 }
 
+
+main {
+    
+}
+
 header a {
     display: flex;
 }
@@ -167,52 +172,6 @@ teksten korrekt. Selvom der står det samme i dem.  */
 
   
 
-.forside-billeder {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    position: relative;
-}
-
-.forside-billeder img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-#bestseller1 {
-    background-image: url(../imgs/bestseller-billede1.webp) alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top";
-}
-
-#bestseller2 {
-    background: src="../imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen";
-}
-
-#bestseller3 {
-    background: src="../imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler";
-}
-
-#bestseller4 {
-    background: src="../imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden";
-}
-}
-
-.overlay {
-
-}
-
-.mobil-tekst {
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    height: 15%;
-    z-index: 10;
-    margin-top: -22%;
-}
 
 .bestseller {
     width: 100%;
@@ -291,7 +250,7 @@ form input[type="submit"]:hover {
         margin-top: 2%;
     }
 
-    .cover {
+    /* .cover {
         height: 40vh;
     }
 
@@ -301,9 +260,17 @@ form input[type="submit"]:hover {
 
     .infographictext {
         position: relative;
+    } */
+
+    .cover, .infographictext {
+        width: 100%; /* Ensure containers fill the screen width */
     }
 
+    .matrialertitel {
+        display: none;
+    }
 }
+
 
 @media only screen and (min-width: 768px) and (orientation: portrait){
 
