--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -114,9 +114,9 @@ body {
 .container1 {
     position: relative;
 }
-.container1 .wrapper1 {
+.container1 .wrapper1{
     width: 100%;
-    height: 55vh;
+    height: 100%;
     margin: 5rem auto;
     overflow: hidden;
     margin-top: 0;
@@ -124,7 +124,7 @@ body {
 }
 .container1 .slider-holder1{
     display: grid;
-    grid-template-columns: repeat(4, 33.33%);
+    grid-template-columns: repeat(4, 50%);
     height: 100%;
 }
 .container1 #slider-image1 {
@@ -161,15 +161,14 @@ body {
 }
 .container2 .wrapper2 {
     width: 100%;
-    height: 55vh;
+    height: 100%;
     margin: 5rem auto;
     overflow: hidden;
     margin-top: 0;
-    margin-bottom: 60px;
 }
 .container2 .slider-holder2{
     display: grid;
-    grid-template-columns: repeat(4, 33.33%);
+    grid-template-columns: repeat(4, 50%);
     height: 100%;
 }
 .container2 #slider-image5 {
@@ -283,12 +282,16 @@ form input[type="submit"]:hover {
         font-size: 20px;
     }
 
-       
 
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait){ /* Til tablet */
 
+    .container1 .slider-holder1 .container2 .slider-holder2{
+        display: grid;
+        grid-template-columns: repeat(4, 33.33%);
+        height: 100%; }
+        
     .prinsesse-titel{
         background-color:rgba(0, 0, 0, 0.8) ;
         position: absolute;
@@ -296,52 +299,40 @@ form input[type="submit"]:hover {
         width: 100%;  
         color: var(--primary);
         font-weight: bold;  
-        font-size: 70px;  
-        padding: 4rem;
+        font-size: 6rem;  
+        padding: 3rem;
         text-align: center;
     }
-
-    .prinsesse-billeder {
-        display: grid;
-        grid-template-columns: (3,1fr);
-        grid-template-rows: repeat(2,1fr);
-        position: relative;
-        width: 100%;   
-        height: 100%;
-    }
-
-
-    
-    .prinsesse{
-        display: grid;    
-        margin: 0 auto;  
-        width: 100%;
-        height: 100%;
-        grid-template-columns: (3,1fr);
-        grid-template-rows: repeat(2,1fr);
-    }
-    
-    .prinsesse img {
-        width: 100%;
-        height: auto; /* Bevarer billedforhold */
-        object-fit: cover; /* Sørger for at billedet fylder hele grid-cellen */
-    }
     .overlay-text{
-        position: relative;
-        bottom: 60%;
         width: 100%;
         color:#E7E0D6;   
         text-align: center;  
-        font-size: 12px; 
+        font-size: 1.5rem; 
         text-shadow: 2px 2px 2px black;
     }
     .overlay-text h2 {
-        font-size: 26px; 
+        font-size: 2.5rem; 
         font-weight: bold; 
+        margin-top: 100%;
     }
 
+    .container2 .button-holder2 .dots {
+        display: inline-block;
+        height: 25px;
+        width: 25px;
+        border-radius: 3rem;
+        background-color: #000000;
+        margin: .4rem .3rem;
+    }
 
-
+    .container1 .button-holder1 .dots {
+        display: inline-block;
+        height: 25px;
+        width: 25px;
+        border-radius: 3rem;
+        background-color: #000000;
+        margin: .4rem .3rem;
+    }
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
@@ -350,6 +341,10 @@ form input[type="submit"]:hover {
 }
 
 @media only screen and (min-width: 1200px){
-
+    .container1 .slider-holder1 .container2 .slider-holder2{
+        display: grid;
+        grid-template-columns: repeat(4, 25%);
+        height: 100%; }
+     
     
 }
