--- a/css/materialer.css
+++ b/css/materialer.css
@@ -118,6 +118,8 @@ header #menu-bar ul li:hover > ul {
         height: 7%;
         color: #fff; 
         text-align: center;
+        font-size: 2.5rem;
+        font-weight: bold;
 
 }
 
@@ -272,14 +274,45 @@ form input[type="submit"]:hover {
 }
 
 
-@media only screen and (min-width: 768px) and (orientation: portrait){
+@media only screen and (min-width: 768px) and (orientation: portrait){ /* Til tablet */
+    .matrialertitel {
+        position: absolute;
+        top: 109%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 5px;
+        background: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 8%;
+        color: #fff;
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
 
-    
+
+
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){
-
-    
+    .matrialertitel {
+        display: block;
+    }
+    .matrialertitel {
+        position: absolute;
+        top: 197%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 5px;
+        background: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 9%;
+        color: #fff;
+        text-align: center;
+        padding: 1rem;
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
 }
 
 @media only screen and (min-width: 1200px){
