--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -154,6 +154,11 @@ header #menu-bar ul li:hover > ul {
     padding: 10px 0;
 }
 
+.overlay-text a {
+    color: inherit;            
+    text-decoration: none;     
+}
+
 footer {
     background-color: #E7E0D6 ; /* Lys baggrund for footeren */
     color: #4f402c;           /* brun tekstfarve */
@@ -265,6 +270,10 @@ form input[type="submit"]:hover {
 .cover-photo-mobil-tablet img{
     width: 100%;
     height: 80%;
+}
+
+nav ul li a:hover {
+    background: var(--accent);
 }
 
 .cover-photo-computer{
@@ -496,12 +505,6 @@ nav label img{
     justify-content: center;
     justify-self: center;
 }
-
-
-
-
-
-
 
 }
 
