--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -472,7 +472,7 @@ nav label img{
     text-align: center;
 }
 
-.contact-info p {
+.kontakt1, .kontakt2 {
     font-size: 18px;
     color: #4f402c;
     line-height: 1.6;
@@ -505,6 +505,12 @@ nav label img{
     justify-content: center;
     justify-self: center;
 }
+
+ul {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+  }
 
 }
 
