--- a/css/materialer.css
+++ b/css/materialer.css
@@ -14,6 +14,10 @@
     --shadow: #4f402c;
 }
 
+.cover-photo-computer {
+    display: none;
+}
+
 body {
     background-color: #E7E0D6
 } 
@@ -252,6 +256,10 @@ form input[type="submit"]:hover {
         margin-top: 2%;
     }
 
+    .cover-photo-computer {
+        display: none;
+    }
+
     /* .cover {
         height: 40vh;
     }
@@ -290,11 +298,13 @@ form input[type="submit"]:hover {
         font-weight: bold;
     }
 
-
+    .cover-photo-computer {
+        display: none;
+    }
 
 }
 
-@media only screen and (min-width: 1024px) and (orientation: landscape){
+@media only screen and (min-width: 1024px) and (orientation: landscape){ /* tablet landscape */
     .matrialertitel {
         display: block;
     }
@@ -315,7 +325,103 @@ form input[type="submit"]:hover {
     }
 }
 
-@media only screen and (min-width: 1200px){
+.cover-photo-computer {
+    display: none;
+}
+
+@media only screen and (min-width: 1200px){ /* til pc */
+    .left-icon {
+        width: 15%;
+    }
+    
+    nav label img {
+        display: none;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    nav ul {
+        display: flex;
+    }
+
+    nav ul li {
+        list-style: none;
+        padding: 0 5%;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        color: var(--primary);
+        font-size: 2rem;
+        padding: 18px;
+    }
+
+    nav ul li a:hover {
+        background: var(--accent);
+    }
+
+    nav ul li ul {
+        display: none;
+    }
+
+    .matriale-billeder {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        background-color: #f8f8f8;
+    }
+    
+    .cover {
+        display: none;
+    }
+
+    .cover-photo-computer {
+        display: block;
+        width: 100%;
+        height: 80%;
+    }
+
+    .matrialertitel {
+        /* position: absolute;
+        top: 95%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 5px;
+        background: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 10%;
+        color: #fff;
+        text-align: center;
+        padding: 0.8rem;
+        font-size: 2.5rem;
+        font-weight: bold;
+    } */
+    /* background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    width: 100%;
+    color: var(--primary);
+    font-weight: bold;
+    font-size: 5rem;
+    padding: 2rem;
+    text-align: center;
+    height: 20%;
+    text-transform: uppercase; */
+    
+    background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 90%;
+    color: var(--primary);
+    font-weight: bold;
+    font-size: 5rem;
+    text-align: center;
+    height: 20%;
+    text-transform: uppercase;
 
     
 }
