--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -267,7 +267,7 @@ form input[type="submit"]:hover {
 }
 
 nav ul li a:hover {
-    background: var(--accent);
+    background: #4f402c;
 }
 
 .cover-photo-computer{
@@ -355,7 +355,7 @@ nav label img{
 
     nav ul li {
         list-style: none;
-        padding: 0 15%;
+        padding: 0 8%;
     }
 
     nav ul li a {
@@ -365,7 +365,7 @@ nav label img{
     }
 
     nav ul li a:hover {
-        background: var(--accent);
+        background: #4f402c;
     }
 
     nav ul li ul {
