--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 
 }
 /* Vores start CSS er designet til mobiler i portait mode */
 :root {
