--- a/css/kategorier.css
+++ b/css/kategorier.css
@@ -1,8 +1,11 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: 
+    box-sizing: border-box; 
+    font-family: "Cinzel", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    
 }
 /* Vores start CSS er designet til mobiler i portait mode */
 :root {
