--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Cinzel", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 /* Vores start CSS er designet til mobiler i portait mode */
 :root {
